<resources>
    <string name="app_name">LeeCodeProgect</string>
    <string name="title_activity_main">FirstMain</string>
    <string name="title_activity_login">用户登录</string>

    <string name="action_edit">编辑</string>
    <string name="action_share">分享</string>
    <string name="action_setting">设置</string>

    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>

    <string name="read_xml_btn01">ReadXML_01</string>
    <string name="read_xml_btn02">ReadXML_02</string>

    <string name="main_nohttp_btn01">NoHttp sample</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- camera-->
    <string name="camera_name">camera</string>
    <string name="newcamera_zoomup">+</string>
    <string name="newcamera_zoomdown">-</string>
    <string name="Camera_takepic">拍照</string>
    <string name="Success">成功</string>
    <string name="Failed">失败</string>

    <!-- com.hardware.camera2-->
    <string name="camera_name2">camera2</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <string name="intro_message">
        <![CDATA[


            This sample demonstrates the basic use of Camera2 API. Check the source code to see how
            you can display camera preview and take pictures.


        ]]>
    </string>

</resources>
