<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
<!--
    <include
        layout="@layout/base_layout"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"/>
-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:text="Hello果王"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"/>
        <TextView
            android:text="Hello果王"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"/>
        <Button
            android:id="@+id/main_login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Login"/>
        <TextView
            android:text="Hello World!果王"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/main_readxml_btn01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_xml_btn01"/>
        <Button
            android:id="@+id/main_readxml_btn02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read_xml_btn02"/>

        <TextView
            android:id="@+id/xml_read_value"
            android:text="Hello果王"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/main_nohttp_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_nohttp_btn01"/>

    <Button
        android:id="@+id/main_camera_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_name"/>

    <Button
        android:id="@+id/main_camera2_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_name2"/>

    <Button
        android:id="@+id/main_recyclerView_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="recyclerView"/>

    <Button
        android:id="@+id/main_listview_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ListView"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/main_service_start_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="启动service"/>
        <Button
            android:id="@+id/main_service_stop_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="关闭"/>
    </LinearLayout>



</LinearLayout>
